# bridget-bot

./: .gitmodules  COPYING  Cargo.toml  README.md  build.rs
src/: circle.rs  curve.rs  hershey_font.rs  main.rs  plottable.rs  plotter.rs  rectangle.rs  remote_plotter.rs  text.rs
