[package]
name = "bridget-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "blocking"] }
serde = "1.0.193"
