[package]
name = "bridget-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hershey-parser = { git = "https://github.com/bryangale/hershey-parser.git" }
prost = "0.12"
rand = "0.8.5"
rand_pcg = "0.3.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
